--- a/survey-app-v/src/index.css
+++ b/survey-app-v/src/index.css
@@ -39,18 +39,30 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  background-color: transparent !important;
+  border: 1px solid #333333;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #333333;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  background-color: #e9e9e9 !important; /* fill on hover */
 }
+/* button {
+  background-color: transparent !important;
+  color: #3B82F6; 
+  border: 2px solid #3B82F6;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: all 0.2s ease;
+} */
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
